Should be able to update weights on the fly, and actually show the final path now.